converted slide 9 to html

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -757,3 +757,20 @@ body
     padding-top: 15%
     img
         margin: 0 auto
+
+.regional-stats
+    position: relative
+    h1,
+    h2
+        position: absolute
+    h1
+        top: 20px
+        left: 40px
+        img
+            width: 450px
+    h2
+        color: #fff
+        font-size: 4em
+        font-weight: 400
+        left: 40px
+        top: 170px
