--- a/sass/main.sass
+++ b/sass/main.sass
@@ -398,6 +398,7 @@ body
       display: block
 
 .fifteen .content,
+.fifteen2 .content,
 .sixteen .content,
 .seventeen .content,
 .nineteen .content
@@ -516,3 +517,5 @@ body
   img
     top: 250px
     left: 430px
+
+@import australia
